# disc-tools

./: contour_integrals.py  datacube.py  datacube_utils.py  disc-analysis.py  disc_analysis.py  disc_cuts.py  disctools.py  path_integrals.py  pyproject.toml  readme.md  tesselations.py
Surfaces/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
Surfaces/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cubes.hpp  from_file.hpp  grid.hpp  io_helpers.hpp  linalg.hpp  marching_cubes.hpp  polygons.hpp  tesselate.cpp  tests.cpp  to_file.hpp  triangles.hpp  type_utils.hpp  utils.hpp  vtk_utils.hpp
Tesselations/: libtesselation.rlib  linalg.rs  triangles.rs  types.rs
disctools/: constants.py  contour_integrals.py  datacube.py  disc_analysis.py  disc_cuts.py  eccentricity.py  intersections.py
notebooks/: Transport.ipynb  ecc_copy.ipynb  eccentricity.ipynb  eccentricity_2.ipynb  surfaces.ipynb
