[build-system]
requires = ["hatchling","numpy","numba"]
build-backend = "hatchling.build"

[project]
name = "disctools"
version = "0.1.0"
authors = [
  { name="Francesco Lovascio", email="francesco.lovascio@ens-lyon.fr" },
]
description = "disc analysis tools"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
